--- a/Client/package.json
+++ b/Client/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dom": "0.0.3",
+    "helmet": "^3.20.0",
+    "jquery": "^3.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
