--- a/Client/package.json
+++ b/Client/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "dom": "0.0.3",
     "helmet": "^3.20.0",
     "jquery": "^3.4.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.1",
