--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
@@ -35,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "brfs": "^2.0.2",
+    "transform-loader": "^0.2.4"
   }
 }
