--- a/Client/package.json
+++ b/Client/package.json
@@ -6,19 +6,24 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "dom": "0.0.3",
+    "fullpage.js": "^3.0.7",
     "helmet": "^3.20.0",
     "jquery": "^3.4.1",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
+    "react-fullpage": "^0.1.19",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-image-masonry": "^0.4.0",
     "react-particles-js": "^2.7.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-transition-group": "^4.2.2"
+    "react-transition-group": "^4.2.2",
+    "react-vivus": "0.0.2",
+    "vivus": "^0.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
