--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react-google-maps": "^9.4.5",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
