--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.7",
     "react-helmet": "^5.2.1",
     "react-image-masonry": "^0.4.0",
     "react-particles-js": "^2.7.0",
