--- a/Client/package.json
+++ b/Client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "dom": "0.0.3",
+    "dotenv-cli": "^2.0.1",
     "fullpage.js": "^3.0.7",
     "helmet": "^3.20.0",
     "jquery": "^3.4.1",
@@ -26,8 +27,9 @@
     "vivus": "^0.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "dotenv -e .env.dev react-scripts start",
+    "build-dev": "dotenv -e .env.dev react-scripts build",
+    "build-prod": "dotenv -e .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
