--- a/Client/package.json
+++ b/Client/package.json
@@ -18,12 +18,18 @@
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-image-masonry": "^0.4.0",
+    "react-lazy-hero": "^2.0.0",
+    "react-parallax": "^2.2.0",
+    "react-parallax-component": "^1.0.6",
     "react-particles-js": "^2.7.0",
     "react-photo-gallery": "^8.0.0",
+    "react-plx": "^1.3.13",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-scroll-parallax": "^2.1.2",
     "react-transition-group": "^4.2.2",
     "react-vivus": "0.0.2",
+    "styled-components": "^4.3.2",
     "vivus": "^0.4.4"
   },
   "scripts": {
