--- a/Server/package.json
+++ b/Server/package.json
@@ -26,7 +26,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react-google-maps": "^9.4.5",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
